# mohair

./: .gitattributes  .gitmodules  README.md  buf.gen.yaml  meson.build  meson.options  pyproject.toml  recompile-pyarrow.bash  setup.py
mohair/: __init__.py  cli.py  clients.py  configs.py  services.py
mohair/mohair/: algebra_pb2.py
mohair/query/: decomposition.py  executor.py  operators.py  planner.py  plans.py  substrait.py  types.py
mohair/skytether/: algebra_pb2.py
mohair/storage/: dbms.py  types.py
mohair/substrait/: algebra_pb2.py  capabilities_pb2.py  extended_expression_pb2.py  function_pb2.py  parameterized_types_pb2.py  plan_pb2.py  type_expressions_pb2.py
resources/examples/: 1_1_1_1_1_500000.expression.arrow  E-GEOD-76312.48-2152.x565.feather  average-expression.substrait  result.split-avg-expr.txt  select-expr.substrait
resources/notes/: protocol.md
resources/scripts/: install-deps.r
resources/subplans/: 0.0.1.substrait  0.1.2.substrait  1.0.3.substrait  1.1.4.substrait  2.0.5.substrait  2.1.6.substrait
src/cpp/: apidep_arrow.hpp  apidep_standard.hpp  meson.build  mohair-config.hpp.in  mohair.hpp  mohair_codes.hpp  mohair_macros.hpp  util.cpp
src/cpp/clients/: client_mohair.cpp  client_mohair.hpp
src/cpp/engines/: acero.cpp  adapter_acero.hpp  adapter_duckdb.hpp  adapter_faodel.hpp  adapter_mpi.hpp  duckdb.cpp  execution.cpp  faodel.cpp  faodel.hpp
src/cpp/headers/: adapter_acero.hpp  adapter_faodel.hpp  arrow.hpp  arrow_deps.hpp  faodel.hpp  mohair.hpp
src/cpp/mohair/: mohair.hpp  operators.cpp  operators.hpp  plans.cpp  plans.hpp  util.cpp  util.hpp
src/cpp/mohair/mohair/: algebra.pb.cc  algebra.pb.h
src/cpp/mohair/substrait/: algebra.pb.cc  algebra.pb.h  capabilities.pb.cc  capabilities.pb.h  extended_expression.pb.cc  extended_expression.pb.h  function.pb.cc  function.pb.h  parameterized_types.pb.cc  parameterized_types.pb.h  plan.pb.cc  plan.pb.h  type.pb.cc  type.pb.h  type_expressions.pb.cc  type_expressions.pb.h
src/cpp/mohair/substrait/extensions/: extensions.pb.cc  extensions.pb.h
src/cpp/query/: adapter_mohair.hpp  apidep_substrait.hpp  messages.cpp  messages.hpp  messaging.hpp  operators.cpp  operators.hpp  plans.cpp  plans.hpp  util.cpp
src/cpp/query/mohair/: algebra.pb.cc  algebra.pb.h  topology.pb.cc  topology.pb.h
src/cpp/query/substrait/: algebra.pb.cc  algebra.pb.h  capabilities.pb.cc  capabilities.pb.h  extended_expression.pb.cc  extended_expression.pb.h  function.pb.cc  function.pb.h  parameterized_types.pb.cc  parameterized_types.pb.h  plan.pb.cc  plan.pb.h  type.pb.cc  type.pb.h  type_expressions.pb.cc  type_expressions.pb.h
src/cpp/query/substrait/extensions/: extensions.pb.cc  extensions.pb.h
src/cpp/services/: adapter_flight.cpp  apidep_flight.hpp  client_mohair.cpp  client_mohair.hpp  faodel.cpp  flight_internal.cpp  flight_internal.hpp  service_duckdb.cpp  service_duckdb.hpp  service_faodel.cpp  service_faodel.hpp  service_mohair.cpp  service_mohair.hpp  service_topology.cpp  service_topology.hpp
src/cpp/toolbox/: csd-service.cpp  faodel-client.cpp  faodel-service.cpp  mohair-client.cpp  mohair.cpp  mohair_cli.cpp  mohair_cli.hpp  read-arrow.cpp  test-faodel.cpp  topo-service.cpp
src/python/mohair/: __init__.py  cli.py  clients.py  services.py  util.py
src/python/mohair/cybindings/: scytether.cpp  scytether.pxd  scytether.pyx
src/python/mohair/mohair/: algebra_pb2.py  topology_pb2.py
src/python/mohair/query/: decomposition.py  executor.py  extension.py  operators.py  plans.py  relations.py  substrait.py  types.py
src/python/mohair/skytether/mohair/: algebra_pb2.py  topology_pb2.py
src/python/mohair/skytether/substrait/: algebra_pb2.py  capabilities_pb2.py  extended_expression_pb2.py  function_pb2.py  parameterized_types_pb2.py  plan_pb2.py  type_expressions_pb2.py  type_pb2.py
src/python/mohair/skytether/substrait/extensions/: extensions_pb2.py
src/python/mohair/storage/: dbms.py  filesystem.py  types.py
src/python/mohair/substrait/: algebra_pb2.py  capabilities_pb2.py  extended_expression_pb2.py  function_pb2.py  parameterized_types_pb2.py  plan_pb2.py  type_expressions_pb2.py  type_pb2.py
src/python/mohair/substrait/extensions/: extensions_pb2.py
toolbox/: SmartFileSystem.py  StartDBService  compile-substrait  mohair  read-substrait  read-substrait.py  split-arrowstream  to_mohair  to_mohair.py  view-partition  write-substrait
