[tool.poetry]
name = "mohair"
version = "0.1.0"
description = "query processing for decomposable queries"
authors = ["Aldrin M <octalene.dev@pm.me>"]
license = "Apache License 2.0"
packages = [
    { include = "mohair", from = "src/python" }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.1"
Cython = "^0.29.30"
wheel = "^0.37.1"
ibis-substrait = "^2.19.0"
duckdb = "^0.6.1"
click = "^8.1.3"
pyarrow = "^12.0.0"
datafusion = "^20.0.0"
pyarrow = "^12.0.1"
pkgconfig = "^1.5.5"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
mohair = "mohair.cli:cli"

[build-system]
requires = [
   "poetry-core>=1.0.0"
  ,"cython>=0.29"
  ,"setuptools"
  ,"wheel"
  ,"pkgconfig>=1.5.5"
]
build-backend = "poetry.core.masonry.api"
