[tool.poetry]
name = "mohair"
version = "0.1.0"
description = "query processing for decomposable queries"
authors = ["Aldrin M <octalene.dev@pm.me>"]
license = "Apache License 2.0"
packages = [
    { include = "mohair", from = "src/python" }
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
Cython = "^3.0.8"
wheel = "^0.42.0"
ibis-substrait = "^4.0.1"
duckdb = "^0.10.0"
click = "^8.1.7"
pyarrow = "^17.0.0"
datafusion = "^35.0.0"
pkgconfig = "^1.5.5"
pyarrow-hotfix = "^0.6"
protobuf = "^5.28.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
mohair = "mohair.cli:cli"

[build-system]
requires = [
   "poetry-core>=1.0.0"
  ,"cython>=0.29"
  ,"setuptools"
  ,"wheel"
  ,"pkgconfig>=1.5.5"
]
build-backend = "poetry.core.masonry.api"
